--- a/visualisation.ipynb
+++ b/visualisation.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from pylab import rcParams\n",
-    "rcParams['figure.figsize'] = 6,5"
+    "rcParams['figure.figsize'] = 6,5\n",
+    "DIR = './data/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,16 +31,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1e64a1fc148>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1e64f80f148>"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -57,7 +58,7 @@
     }
    ],
    "source": [
-    "df = get_data(,range(1900,2000))\n",
+    "df = get_data(DIR,range(1900,2000))\n",
     "name_dinamics = df[(df['Name'] == 'Ruth') | (df['Name'] == 'Robert')].groupby(['Name','Year']).sum().unstack('Name')\n",
     "name_dinamics.plot()"
    ]
